--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
 		"autoprefixer": "^10.4.13",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-svelte3": "^4.0.0",
+		"eslint-plugin-svelte": "^2.35.1",
 		"postcss": "^8.4.21",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
-		"svelte": "^3.54.0",
+		"svelte": "^4.2.7",
 		"svelte-check": "^3.0.1",
 		"tailwindcss": "^3.2.4",
 		"tslib": "^2.4.1",
@@ -35,6 +35,7 @@
 		"@sveltejs/adapter-vercel": "^1.0.6",
 		"@vercel/analytics": "^0.1.8",
 		"@vercel/kv": "^0.2.2",
+		"ai": "^2.2.26",
 		"esbuild": "^0.18.11",
 		"eventsource-parser": "^0.1.0",
 		"svelte-scrollto": "^0.2.0"
