--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write ."
+		"format": "prettier --plugin-search-dir . --write .",
+		"db:migration:new": "supabase migration new",
+		"db:migration:auto": "supabase db diff --use-migra -f",
+		"db:types": "supabase gen types typescript --local --schema public > src/lib/types/supabase.ts"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^1.0.0",
@@ -32,6 +35,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@supabase/supabase-js": "^2.39.0",
 		"@sveltejs/adapter-vercel": "^1.0.6",
 		"@vercel/analytics": "^0.1.8",
 		"@vercel/kv": "^0.2.2",
