--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"postcss": "^8.4.21",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
+		"supabase": "^1.115.5",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.0.1",
 		"tailwindcss": "^3.2.4",
